--- a/css/styles.css
+++ b/css/styles.css
@@ -7,23 +7,19 @@
 .title-container {
     padding-top: 0.5%;
     padding-bottom: 1%;
+    background: coral;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .rows-container {
+    background: blanchedalmond;
+    background-attachment: fixed;
     border: 0px #010000;
 }
 
 .contacts-container {
-    background: blanchedalmond;
-    background-size: cover;
-    background-attachment: fixed;
     border: 2px solid #010000;
-    align-items: center;
-    padding-bottom: 1.2%;
-}
-
-.index-container {
-    margin-top: 0px;
 }
 
 .form-container {
@@ -37,6 +33,7 @@
     font-size: larger;
     font-weight: bold;
     padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 .btn {
@@ -44,9 +41,10 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: bolder;
-    font-size: 2.3vw;
-    background:none;
-    border:none;
+    font-size: 20px;
+    background: blanchedalmond;
+    background-size: cover;
+    border: 0px;
     cursor: pointer;
     padding:0.3em 1.2em;
     margin:0.6em 0.3em 0.3em 0;
