--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,25 @@ table {
     background-color: blanchedalmond;
 }
 
+#contacts td {
+    padding: 6px;
+    text-align: center;
+    font-family: 'Montserrat';
+    border: 1px solid #060505;
+    vertical-align: middle;
+    font-weight: 500;
+    font-size: 16px;
+    font-weight: bold;
+    word-wrap: break-word;
+    color: #060505;
+    background-color: blanchedalmond;
+}
+
+#contacts td span {
+    display: block;
+    font-size: 100%;
+}
+
 .title-container {
     padding-top: 0.5%;
     padding-bottom: 1%;
