updated the add contact html and css, needs to be linked with backend.

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,13 @@ table {
     font-size: 100%;
 }
 
+.addContact {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    align-self: center;
+    display: none;
+}
+
 .title-container {
     padding-top: 0.5%;
     padding-bottom: 1%;
