Added visual password validation for user to see on signup page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,4 +101,17 @@ table {
     margin:0.6em 0.3em 0.3em 0;
     float: left;
 }
- 
+
+.wrong .fa-check
+{
+    display: none;
+}
+
+.good .fa-times
+{
+    display: none; 
+}
+.valid-feedback,
+.invalid-feedback {
+  margin-left: calc(2em + 0.25rem + 1.5rem);
+}
