--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,17 @@
 
 } */
 
+.add-contact-row {
+    padding-left: 7%;
+    padding-right: 7%;
+    padding-bottom: 20px;
+}
+
+.add-button {
+    padding-left: 30%;
+    padding-right: 30%;
+}
+
 .tables {
     align-self: center;
 }
@@ -24,25 +35,23 @@ table {
 #contacts th {
     padding: 15px 12px;
     text-align: center;
-    font-family: 'Montserrat';
     font-weight: 500;
     font-size: 16px;
     font-weight: bold;
-    color: #060505;
+    color: rgb(34, 34, 34);
     background-color: blanchedalmond;
 }
 
 #contacts td {
     padding: 6px;
     text-align: center;
-    font-family: 'Montserrat';
-    border: 1px solid #060505;
+    border: 1px solid rgb(34, 34, 34);
     vertical-align: middle;
     font-weight: 500;
     font-size: 16px;
     font-weight: bold;
     word-wrap: break-word;
-    color: #060505;
+    color: rgb(34, 34, 34);
     background-color: blanchedalmond;
 }
 
@@ -60,34 +69,57 @@ table {
 .title-container {
     padding-top: 0.5%;
     padding-bottom: 1%;
-    background: coral;
     background-size: cover;
     background-attachment: fixed;
+}
+
+.btn-format {
+    background: rgb(255, 96, 0);
+    background-color: rgb(255, 96, 0);
+    color: rgb(34, 34, 34);
+    border: 1px rgb(34, 34, 34);
 }
 
 .rows-container {
     background: blanchedalmond;
     background-attachment: fixed;
-    border: 0px #010000;
+    border: 0px rgb(34, 34, 34);
 }
 
 .contacts-container {
-    border: 2px solid #010000;
+    border: 2px solid rgb(34, 34, 34);
 }
 
 .home-form {
     margin-bottom: 150px;
     padding-bottom: 150px;
+    padding-left: 40%;
+    padding-right: 40%;
+    margin-left: 40%;
+    margin-right: 40%;
 }
 
 .form-container {
-    border: 1px solid #010000;
+    border: 1px solid rgb(34, 34, 34);
     border-radius: 14px;
     background: blanchedalmond;
     background-size: cover;
     padding: 30px 24px;
     margin-top: 20px;
-    box-shadow: -1px 4px 26px 11px rgba(0, 0, 0, 0.35);
+    margin-left: 10px;
+    margin-right: 10px;
+    /* box-shadow: -1px 4px 26px 11px rgba(0, 0, 0, 0.35); */
+}
+
+.full-table-container {
+    border: 2px solid rgb(34, 34, 34);
+    background: blanchedalmond;
+    background-size: cover;
+    min-height: 64%;
+    padding: 10px 16px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .contact {
@@ -98,12 +130,13 @@ table {
 }
 
 .btn {
-    color: #00102A;
+    color: rgb(34, 34, 34);
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: bolder;
     font-size: 20px;
-    background: blanchedalmond;
+    background: rgb(255, 96, 0);
+    background-color: rgb(255, 96, 0);
     background-size: cover;
     border: 0px;
     cursor: pointer;
