--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 .background {
-    background: url('../images/newyork.jpg') no-repeat; width: 100%; height: 100vh;
+    background: url('../images/sunset_real.gif') repeat; width: 100%; height: 100vh;
     background-size: cover;
     background-attachment: fixed;
 } 
 
-/* .title {
-    font-size: x-large;
-
-} */
+.input-format {
+    padding-left: 5%;
+    padding-right: 5%;
+}
 
 .add-contact-row {
     padding-left: 7%;
@@ -92,11 +92,6 @@ table {
 
 .home-form {
     margin-bottom: 150px;
-    padding-bottom: 150px;
-    padding-left: 40%;
-    padding-right: 40%;
-    margin-left: 40%;
-    margin-right: 40%;
 }
 
 .form-container {
@@ -104,7 +99,7 @@ table {
     border-radius: 14px;
     background: blanchedalmond;
     background-size: cover;
-    padding: 30px 24px;
+    padding: 24px;
     margin-top: 20px;
     margin-left: 10px;
     margin-right: 10px;
