--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,36 @@
-.background {
-    background: url('../images/sunset_real.gif') repeat; width: 100%; height: 100vh;
+body {
+    background: url('../images/sunset.jpg') no-repeat; width: 100%; height: 100vh;
     background-size: cover;
     background-attachment: fixed;
-} 
+}
+
+.title {
+    padding-top: 6%;
+}
+
+.link-text {
+    color: rgb(251,251,223,0.9);
+    font-size: 40px;
+    font-weight: bold;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(34, 34, 34, 0.8);
+}
+
+.title-text {
+    font-size: 70px;
+    color: #ffc107;
+    font-weight: bold;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: rgb(34, 34, 34);
+}
+
+.subtitle-text {
+    font-size: 40px;
+    color: #ffc107;
+    font-weight: bold;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(34, 34, 34);
+}
 
 .input-format {
     padding-left: 5%;
@@ -39,7 +67,7 @@ table {
     font-size: 16px;
     font-weight: bold;
     color: rgb(34, 34, 34);
-    background-color: blanchedalmond;
+    background-color: rgb(251,251,223);
 }
 
 #contacts td {
@@ -52,7 +80,7 @@ table {
     font-weight: bold;
     word-wrap: break-word;
     color: rgb(34, 34, 34);
-    background-color: blanchedalmond;
+    background-color: rgb(251,251,223);
 }
 
 #contacts td span {
@@ -81,7 +109,7 @@ table {
 }
 
 .rows-container {
-    background: blanchedalmond;
+    background: rgb(251,251,223);
     background-attachment: fixed;
     border: 0px rgb(34, 34, 34);
 }
@@ -97,7 +125,7 @@ table {
 .form-container {
     border: 1px solid rgb(34, 34, 34);
     border-radius: 14px;
-    background: blanchedalmond;
+    background: rgb(251,251,223, 0.8);
     background-size: cover;
     padding: 24px;
     margin-top: 20px;
@@ -107,12 +135,12 @@ table {
 }
 
 .full-table-container {
-    border: 2px solid rgb(34, 34, 34);
-    background: blanchedalmond;
+    border: 1px solid rgb(34, 34, 34, 0);
+    background: rgb(255, 235, 205, 0);
     background-size: cover;
-    min-height: 64%;
+    min-height: 76vh;
     padding: 10px 16px;
-    margin-top: 20px;
+    margin-top: 0px;
     display: flex;
     flex-direction: column;
 }
